--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "antd": "^4.19.3",
+    "antd": "^4.21.3",
     "axios": "^0.26.1",
     "craco-less": "^2.0.0",
     "dotenv": "^16.0.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "react-redux": "^7.2.6",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.2.2",
